# VSoftRenderer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: BuildLinux.yml  build_linux.yml  build_macos.yml  build_windows.yml
Renderer/: CMakeLists.txt
Renderer/Application/: CMakeLists.txt  main.cpp
Renderer/Application/include/VSoftRenderer/Loaders/: ModelLoader.h  TextureLoader.h
Renderer/Application/include/VSoftRenderer/Resource/: Model.h
Renderer/Application/src/: main.cpp
Renderer/Application/src/Loaders/: ModelLoader.cpp  TextureLoader.cpp
Renderer/Runtime/include/VSoftRenderer/: AABB.h  Color.h  FrameBuffer.h  Line.h  Matrix4.h  Mesh.h  Triangle3D.h
Renderer/Runtime/src/: Utils.cpp
Renderer/VGL/: CMakeLists.txt
Renderer/VGL/include/VGL/: AABB.h  Color.h  DirectionalLight.h  FrameBuffer.h  Line.h  Matrix3.h  Matrix4.h  Mesh.h  Pixel.h  Texture2D.h  Triangle2D.h  Triangle3D.h  Utils.h  VGL.h  Vector2.h  Vector3.h  Vector4.h
Renderer/VGL/include/VGL/Shaders/: Gouraud.h  Phong.h
Renderer/VGL/src/: Color.cpp  FrameBuffer.cpp  Line.cpp  Matrix3.cpp  Matrix4.cpp  ShadersCompile.cpp  Texture2D.cpp  Triangle2D.cpp  Triangle3D.cpp  Utils.cpp  VGL.cpp
Renderer/runtime/: CMakeLists.txt
Renderer/runtime/include/VSoftRenderer/: DirectionalLight.h  Texture2D.h  Vector2.h
Renderer/runtime/src/: Texture2D.cpp  Triangle2D.cpp  VGL.cpp
include/: line.h
include/VSoftRenderer/: Line.h  VLine.h
renderer/: CMakeLists.txt
renderer/app/: CMakeLists.txt  main.cpp
renderer/runtime/: CMakeLists.txt
renderer/runtime/include/VSoftRenderer/: AABB.h  Color.h  DirectionalLight.h  Extern.h  FrameBuffer.h  Line.h  Matrix4.h  Pixel.h  RenderConfig.h  Texture2D.h  Triangle.h  Triangle2D.h  Triangle3D.h  Utils.h  VGL.h  Vector2.h  Vector2Int.h  Vector3.h  Vector4.h
renderer/runtime/src/: Color.cpp  FrameBuffer.cpp  Line.cpp  Matrix4.cpp  RenderConfig.cpp  Texture2D.cpp  Triangle.cpp  Triangle2D.cpp  Triangle3D.cpp  Utils.cpp  VGL.cpp
src/: CMakeLists.txt  Line.cpp  VLine.cpp  line.c  main.c  main.cpp
